@@ -6,10 +6,10 @@ import lombok.Getter;
 
 @Getter
 public enum BlockFlow {
-  PASSWORDLESS("passwordless", Arrays.asList("/v1/passwordless/init", "/v1/passwordless/complete")),
-  PASSWORD("password", Arrays.asList("/v1/signin", "/v1/signup")),
-  SOCIAL_AUTH("social_auth", Arrays.asList("/v1/auth/fb", "/v1/auth/google")),
-  OTP_VERIFY("otp_verify", Arrays.asList("/v1/otp/send", "/v1/otp/verify"));
+  PASSWORDLESS("passwordless", List.of("/v1/passwordless/init", "/v1/passwordless/complete")),
+  PASSWORD("password", List.of("/v1/signin", "/v1/signup")),
+  SOCIAL_AUTH("social_auth", List.of("/v1/auth/fb", "/v1/auth/google")),
+  OTP_VERIFY("otp_verify", List.of("/v1/otp/send", "/v1/otp/verify"));
 
   private final String flowName;
   private final List<String> apiPaths;
